# elastic-incident-commander

./: .env.example  .gitignore  README.md  package.json  pyproject.toml  tailwind.config.ts
.github/workflows/: ci.yml
agents/: commander.json  communication.json  diagnosis.json  remediation.json  triage.json
dashboard/: package.json  tailwind.config.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/architecture/: page.tsx
dashboard/src/app/demo/: page.tsx
docs/: ARCHITECTURE.md  MILESTONES.md  SPEC.md  SUBMISSION_LOCK.md
setup/: bootstrap.py  seed_data.py
src/app/: globals.css  layout.tsx  page.tsx
submission-package/: ADVERSARY_RECHECK.md  DEMO_VIDEO_SCRIPT.md  DEVPOST_DRAFT.md  FINAL_SUBMISSION_HANDOFF.md  SUBMISSION_CHECKLIST.md
tools/esql/: alert_correlator.json  fix_verifier.json  incident_timeline.json  log_analyzer.json  metric_anomaly.json  service_dependency.json  severity_classifier.json  trace_correlator.json
workflows/: escalation.yaml  pod_restart.yaml  postmortem_generate.yaml  scale_service.yaml  slack_notify.yaml
