[project]
name = "elastic-incident-commander"
version = "0.1.0"
description = "Multi-agent DevOps incident response system built with Elastic Agent Builder"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3.0",
]
